@@ -7,12 +7,14 @@
     "aqtinstall",
     "codesign",
     "codesigning",
+    "contribs",
     "distros",
     "dmgbuild",
     "dotenv",
     "gdrive",
     "keychain",
     "Keychains",
+    "LLDB",
     "macdeployqt",
     "msvc",
     "notarytool",
