@@ -46,6 +46,7 @@ Enhancements:
 - #7374 Add missing DEB and RPM dependencies
 - #7376 Automated weekly build of Docker images for Linux runners
 - #7378 Improve workflow triggers to ensure correct run time
+- #7379 Resolve Qt framework path with `install_name_tool`
 - #7380 Add `qt6-qpa-plugins` Qt dependency for Debian
 
 # 1.14.6
